--- a/oncoFinder2/templates/report/report_ajax_pathway_detail.html
+++ b/oncoFinder2/templates/report/report_ajax_pathway_detail.html
@@ -2,7 +2,7 @@
 <h4>Group: {{categories}}</h4>
 <hr/>
     <ul class="nav nav-tabs">
-    {%if report.id == 7%}
+    {%if 'gsk_prj4' in report.slug}
         <li class="active"><a href="#fragment-1" data-toggle="tab"><span>Genes </span></a></li>
     {%else%}
         <li class="active"><a href="#fragment-1" data-toggle="tab"><span>Differential Genes </span></a></li>
