update gsk prj4 reports 2

--- a/oncoFinder2/templates/report/gsk_prj4.html
+++ b/oncoFinder2/templates/report/gsk_prj4.html
@@ -1673,6 +1673,22 @@ $(function() {
 
 <div id='hide_hit' style='display:none;'> <!-- Div to hide and load on button click -->
 
+
+
+Here we utilised our already established methodology to estimate the probability of failure in clinical trials (Artemov et al., 2016). On Figures 1 and 2 you can see the overall statistic for provided L1000 dataset. In "Hit qualification table" you can see the actual score of drug perturbations analysed in this report.
+<br/>
+<br/>
+<center>
+<img src='/media/report-portal/gsk_prj4_t1/hit1.png' />
+<p>Figure 1. Probability of success for drug perturbations from provided L1000 dataset.
+</p>
+<hr style='width:50%' />
+
+<img src='/media/report-portal/gsk_prj4_t1/hit2.png' />
+<p>Figure 2. Probability of failure for drug perturbations from provided L1000 dataset.
+</p>
+<hr style='width:50%' />
+</center>
 <h4>Table <span class='tbl_num'></span>Hit qualification </h4>
        <table id="tbl-hit" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
