update gsk prj4 reports 3

--- a/oncoFinder2/templates/report/gsk_prj4.html
+++ b/oncoFinder2/templates/report/gsk_prj4.html
@@ -1675,7 +1675,9 @@ $(function() {
 
 
 
-Here we utilised our already established methodology to estimate the probability of failure in clinical trials (Artemov et al., 2016). On Figures 1 and 2 you can see the overall statistic for provided L1000 dataset. In "Hit qualification table" you can see the actual score of drug perturbations analysed in this report.
+Here we utilised our already established methodology to estimate the probability of failure in clinical trials 
+(<a href='http://biorxiv.org/content/biorxiv/early/2016/12/29/095653.full.pdf' target='_blank'>Artemov et al., 2016</a>). 
+On Figures 1 and 2 you can see the overall statistic for provided L1000 dataset. In "Hit qualification table" you can see the actual score of drug perturbations analysed in this report.
 <br/>
 <br/>
 <center>
