add similarity block to gsk_prg4 2

--- a/oncoFinder2/templates/report/gsk_prj4.html
+++ b/oncoFinder2/templates/report/gsk_prj4.html
@@ -65,7 +65,7 @@
             {%endif%}
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#biomap">BioMAP inference</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#hit">Hit qualification</a></li>  
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#sim_analysis">Similarity scoring of GSK L1000 data in comparison to LINCS dataset</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#sim_analysis">Similarity to LINCS dataset</a></li>
             {%if 'gsk' in report.slug %}
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#conclusions">Discussion</a></li>
             {%endif%}
@@ -1771,7 +1771,7 @@ $(function() {
 <!-- ---------------------------------Similarity--------------------------------------------- -->
 
  <hr/> 
-<h2 id='sim_analysis'>Similarity scoring of GSK L1000 data in comparison to LINCS dataset</h2>
+<h2 id='sim_analysis'>Similarity to LINCS dataset</h2>
 <hr/>
 
 
@@ -1941,7 +1941,7 @@ $(function() {
             {%endif%}
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#biomap">BioMAP inference</a></li>            
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#hit">Hit qualification</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#sim_analysis">Similarity scoring </a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#sim_analysis">Similarity to LINCS dataset </a></li>
             {%if 'gsk' in report.slug %}
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#conclusions">Discussion</a></li>
             {%endif%}
