--- a/oncoFinder2/templates/report/gsk_prj4.html
+++ b/oncoFinder2/templates/report/gsk_prj4.html
@@ -1781,7 +1781,14 @@ $(function() {
 </center>
 
 <div id='hide_sim' style='display:none; overflow-x: auto;'> <!-- Div to hide and load on button click -->
-
+<br/>
+<p>
+In this section we calculated the similarity of investigated perturbations to LINCS dataset. For each sample we performed the
+ correlation analysis of its gene expression values and 1.3+ million samples from LINCS on the probe level. 
+ Then for each sample we picked top-200 LINCS samples by correlation coefficient and combined these lists 
+ in the resulting table. Within each perturbation we averaged correlation coefficients between two replicates
+</p>
+<br/><br/>
 <h4>Table <span class='tbl_num'></span>Similarity scoring of GSK L1000 data in comparison to LINCS dataset </h4>
        <table id="tbl-sim" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
